; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_namemap_internal_test.c_test_namemap_stored.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_namemap_internal_test.c_test_namemap_stored.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_namemap_stored to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_namemap_stored() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32* @ossl_namemap_stored(i32* null)
  store i32* %2, i32** %1, align 8
  %3 = load i32*, i32** %1, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = load i32*, i32** %1, align 8
  %7 = call i64 @test_namemap(i32* %6)
  %8 = icmp ne i64 %7, 0
  br label %9

9:                                                ; preds = %5, %0
  %10 = phi i1 [ false, %0 ], [ %8, %5 ]
  %11 = zext i1 %10 to i32
  ret i32 %11
}

declare dso_local i32* @ossl_namemap_stored(i32*) #1

declare dso_local i64 @test_namemap(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
